subir Dokerfile y configuraciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 spring.application.name=Cojali
+server.port=8080
 
-server.port=7777
+# Conexión a la base de datos MySQL en Railway
+#COMENTAS DESDE AQUÍ
+#spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:34075/railway
+#spring.datasource.username=root
+#spring.datasource.password=dCkjgWzLjqQBkUqTuvbNyJSvLODZOaML
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.jpa.hibernate.ddl-auto=update
+#HASTA AQUÍ
 
-spring.datasource.url=jdbc:mysql://localhost:3306/COJALI
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
+# Configuración del correo 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tallercojali@gmail.com
