cambios utf-8 en application.propiesrties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 spring.application.name=Cojali
 server.port=8080
 
-# Conexión a la base de datos MySQL en Railway
-#COMENTAS DESDE AQUÍ
+# Conexiï¿½n a la base de datos MySQL en Railway
+#COMENTAS DESDE AQUï¿½
 #spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:34075/railway
 #spring.datasource.username=root
 #spring.datasource.password=dCkjgWzLjqQBkUqTuvbNyJSvLODZOaML
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=update
-#HASTA AQUÍ
+#HASTA AQUï¿½
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
-# Configuración del correo 
+# Configuraciï¿½n del correo 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tallercojali@gmail.com
